cli/tests/snapshot/inputs/errors/destructuring_assign_fail.ncl
# capture = 'stderr'
# command = []
let {a=x} = {a=1}
in a == 1
